[package]
name = "sandbox-client"
description = "Sandbox Client"
version = "0.1.0"
authors = ["Steve Mostovoy <stevemostovoysm@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 3

[profile.release]
lto = true

[features]

[dependencies]
wasm-bindgen = "0.2.45"
crossbeam = "0.7.3"
colors-transform = "0.2.11"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "MouseEvent",
    "KeyboardEvent",
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
