[package]
name = "sandbox"
description = "Sandbox"
version = "0.1.0"
authors = ["Steve Mostovoy <stevemostovoysm@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 3

[profile.release]
lto = true

[features]

[dependencies]
wasm-bindgen = "0.2.45"
colors-transform = "0.2.11"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
indexmap = "1.4.0"

[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "MouseEvent",
    "KeyboardEvent",
    "ImageData",
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
